archetect-templating/tests/snapshots/test_templates__vm@inexpr.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{{ 1 in seq }}\n{{ \"missing\" in seq }}\n{{ 1 not in seq }}\n{{ \"missing\" not in seq }}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: archetect_templating/tests/inputs/inexpr.txt
---
true
false
false
true

