archetect-templating/tests/snapshots/test_templates__vm@loop-recursion-error.txt.snap
---
source: archetect_templating/tests/test_templates.rs
description: "{% for item in seq recursive %}\n  {{ loop(seq) }}\n{% endfor %}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: archetect_templating/tests/inputs/loop-recursion-error.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "recursion limit exceeded",
    name: "loop-recursion-error.txt",
    line: 1,
}

invalid operation: recursion limit exceeded (in loop-recursion-error.txt:1)
-------------------------- loop-recursion-error.txt ---------------------------
   1 > {% for item in seq recursive %}
   2 |   {{ loop(seq) }}
   3 | {% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    loop: Loop {
        index0: 0,
        index: 1,
        length: 3,
        revindex: 3,
        revindex0: 2,
        first: true,
        last: false,
        depth: 500,
        depth0: 499,
        previtem: Undefined,
        nextitem: 2,
    },
    seq: [
        1,
        2,
        3,
    ],
}
-------------------------------------------------------------------------------

